# hacathonproject

./: .gitignore  Dockerfile  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
data/: emails.json  generate_emails.py
env/: environment.py  models.py  reward.py  state.py
examples/: grpo_training.ipynb
graders/: graders.py
server/: app.py
server/templates/: index.html
tasks/: data.py
