[project]
name = "email-triage-env"
version = "0.1.0"
description = "A real-world email triage and response environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "pydantic>=2.0",
    "numpy",
    "pillow",
    "openai",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
